[package]
name = "TestMongodb"
version = "0.1.0"
authors = ["frai <me@maxfrai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1"
bson = "1.1"

[dependencies.mongodb]
version = "1.1"
default-features = false
features = ["sync"]